; ModuleID = '/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_tl_parse.c_tl_parse_save_pos.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/vkext/extr_vkext_tl_parse.c_tl_parse_save_pos.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tl_parse_save_pos() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* null, i8** %2, align 8
  %4 = call i32 @do_rpc_fetch_get_pos(i8** %2)
  store i32 %4, i32* %3, align 4
  %5 = load i8*, i8** %2, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i8*, i8** %2, align 8
  %9 = call i32 @tl_set_error(i8* %8)
  store i32 0, i32* %1, align 4
  br label %12

10:                                               ; preds = %0
  %11 = load i32, i32* %3, align 4
  store i32 %11, i32* %1, align 4
  br label %12

12:                                               ; preds = %10, %7
  %13 = load i32, i32* %1, align 4
  ret i32 %13
}

declare dso_local i32 @do_rpc_fetch_get_pos(i8**) #1

declare dso_local i32 @tl_set_error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
